# Programming-basics

./: CMakeLists.txt  LICENSE
lab_2/: fibbonacci.c  liczby_doskonale.c  liczby_najpierwsze.c
lab_3/: Merge.c  Pointers.c  Print_array.c
lab_4/: Sasiedzi.c  Silnia.c  Spirala.c
lab_5/: Dzialka.c  Kwadrat.c
lab_6/: Liczby_rzymskie.c  Rectangles.c  Trojkonty_jednobarwne.c
lab_7/: test.c  vector.c
