cmake_minimum_required(VERSION 3.21)
project(Pprog C)

set(CMAKE_C_STANDARD 99)

#add_executable(Liczby_doskonale lab_2/liczby_doskonale.c)
#add_executable(Liczby_najpierwsze lab_2/liczby_najpierwsze.c)
#add_executable(Fibbonacci lab_2/fibbonacci.c)
#add_executable(Merge lab_3/Merge.c)
#add_executable(Pointers lab_3/Pointers.c)
#add_executable(Print_array lab_3/Print_array.c)
add_executable(Silnia lab_4/Silnia.c)
add_executable(Sasiedzi lab_4/Sasiedzi.c)
add_executable(Spirala lab_4/Spirala.c)
add_executable(Dzialka  lab_5/Dzialka.c)
add_executable(Kwadrat lab_5/Kwadrat.c)
add_executable(Rectangles lab_6/Rectangles.c)
add_executable(Liczby_rzymskie lab_6/Liczby_rzymskie.c)
add_executable(Trojkonty_jednobarwne lab_6/Trojkonty_jednobarwne.c)
add_executable(Vector lab_7/vector.c)
add_executable(Test lab_7/test.c)